--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
-name = "mcp-file-server"
+name = "moby-mcp-server"
 version = "1.0.0"
-description = "MCP File System Server with Docker and ngrok"
+description = "Moby MCP Server - Docker-style filesystem server with FastMCP"
 requires-python = ">=3.11"
 dependencies = [
     "mcp>=1.0.0",
+    "fastmcp>=0.1.0",
     "python-dotenv>=1.0.0",
-    "aiohttp>=3.9.0",
 ]
 
 [project.optional-dependencies]
@@ -14,11 +14,4 @@ dev = [
     "pytest>=7.4.0",
     "pytest-asyncio>=0.21.0",
 ]
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[tool.uv]
-dev-dependencies = []
 
