--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,11 @@ services:
     container_name: mcp-file-server
     environment:
       - API_KEY=${API_KEY}
-      - PORT=8000
+      - PORT=${PORT:-8080}
     volumes:
       - ${DATA_DIRECTORY:-./data}:/data
     ports:
-      - "8000:8000"
+      - "${PORT:-8080}:${PORT:-8080}"
     restart: unless-stopped
     networks:
       - mcp-network
@@ -20,7 +20,7 @@ services:
     container_name: mcp-ngrok
     command:
       - "http"
-      - "mcp-server:8000"
+      - "mcp-server:${PORT:-8080}"
     environment:
       - NGROK_AUTHTOKEN=${NGROK_AUTHTOKEN}
     ports:
